test/kubernetes/e2e/features/validation/testdata/invalid-resources/gateway.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-without-type
spec:
  # This is invalid: the type field is missing
  bindAddress: '::'
