test/kubernetes/e2e/features/validation/testdata/invalid-resources/invalid-upstream-no-port.yaml
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: invalid-placeholder-us
spec:
  static:
    hosts:
      - addr: "~"
