test/kubernetes/e2e/features/validation/testdata/invalid-resources/rlc.yaml
apiVersion: ratelimit.solo.io/v1alpha1
kind: RateLimitConfig
metadata:
  name: rlc
spec:
  raw:
    descriptors:
      - key: foo
        value: foo
        rateLimit:
          requestsPerUnit: 1
          unit: MINUTE
    rateLimits:
      - actions:
          - genericKey:
              descriptorValue: bar
