test/kubernetes/e2e/features/validation/testdata/invalid-resources/upstream-no-valid-host.yaml
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: invalid-upstream
  namespace: gloo-system
spec:
  static:
    hosts:
      - addr: ~
