test/kubernetes/e2e/features/validation/testdata/invalid-resources/vs-method-matcher.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: method-matcher
spec:
  virtualHost:
    domains:
      - unique2
    routes:
      - matchers:
          - exact: /delegated-nonprefix  # not allowed
        delegateAction:
          name: does-not-exist # also not allowed, but caught later
          namespace: anywhere
