test/kubernetes/e2e/features/validation/testdata/invalid-resources/vs-no-upstream.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: no-upstream-vs
spec:
  virtualHost:
    routes:
      - matchers:
          - headers:
              - name: foo
                value: bar
        routeAction:
          single:
            upstream:
              name: does-not-exist
