test/kubernetes/e2e/features/validation/testdata/invalid-resources/vs-typo.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
spec:
  # This is invalid: the virtualHost field is mistyped as virtualHoost
  virtualHoost: {}
